Annotate page type in the meta line, instead of free-form.

--- a/sk.html
+++ b/sk.html
@@ -415,7 +415,7 @@ MACAPTX&rarr;
 		<sup>-</sup><sup>1</sup>JPX <sub>&gamma;</sub> MACAPA
 
 <hr>
-[Page header: "IES 2XMX 010" (previous page had "007", out of sequence?)]
+[Page header: "IES 2XMX 010" (octal numbering, previous page had 007)]
 
 		JPQ MACAPX
 MACAP1&rarr;	RSX <sub>&alpha;</sub> ATBITS+1
@@ -1962,39 +1962,30 @@ LAST&rarr;	ZZLAST
 
 <hr>
 [Page header: "IES OPLW 001"]
-[Page contains no code, beginning of the symex table.]
 
 <hr>
 [Page header: "IES OPLW 002"]
-[Page contains no code, continuation of the symex table.]
 
 <hr>
 [Page header: "IES OPLW 003"]
-[Page contains no code, last part of the symex table.]
 
 <hr>
 [Page header: "IES OPLW 004"]
-[Page contains no code, beginning of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 005"]
-[Page contains no code, continuation of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 006"]
-[Page contains no code, continuation of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 007"]
-[Page contains no code, continuation of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 010"]
-[Page contains no code, end of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 012"]
-[Beginning of the macro definition block]
 
 &#9755;&#9755; MOVE|A&rarr;B
 hLDE A
@@ -2049,7 +2040,6 @@ SUB Q
 
 <hr>
 [Page header: "IES OPLW 013"]
-[Continuation of the macro definition block]
 
 hJOV U+(Q)-(Q)
 hJPQ CACT
@@ -2104,7 +2094,6 @@ STC A+C
 
 <hr>
 [Page header: "IES OPLW 014"]
-[Continuation of the macro definition block]
 
 STA A+D
 &#9755;&#9755;EMD
@@ -2159,7 +2148,6 @@ SKZ ERRORSTOP
 
 <hr>
 [Page header: "IES OPLW 015"]
-[Continuation of the macro definition block]
 
 <sup>1</sup>#<sub>&alpha;</sub> [another interesting case]
 JPQ P
@@ -2214,7 +2202,6 @@ hJPQ SUBR
 
 <hr>
 [Page header: "IES OPLW 016"]
-[Continuation of the macro definition block]
 
 LGORR2&rarr;	SKX<sub>X</sub><sub>R</sub><sub>2</sub>#	**MODIFIED
 LGORREND&rarr;	JPQ LGORR0
@@ -2268,7 +2255,6 @@ SUBR1&rarr;	JPQ #
 
 <hr>
 [Page header: "IES OPLW 017"]
-[End of the macro definition block]
 
 &#9755;&#9755;DEF HEADER&equiv;T&rarr;N&rarr;P
 		T1=P
@@ -2315,7 +2301,6 @@ SUBR1&rarr;	JPQ #
 
 <hr>
 [Page header: "IES OPLW 020"]
-[Beginning of main program block]
 
  200067|
 		JPQ STARTS
@@ -2368,7 +2353,6 @@ MM4&rarr;	UNIVBH	**CONSTRAINTS
 
 <hr>
 [Page header: "IES OPLW 021"]
-[Continuation of the main program block]
 
 H1&rarr;		SMASBL,4,,MM2-NLIST	**FREES
 		MM2+SPECB+1-NLIST,,SPLATT
@@ -2417,7 +2401,6 @@ H7&rarr;		HEADER&equiv;HOLDERS&rarr;(42,26,,24,23)
 
 <hr>
 [Page header: "IES OPLW 022"]
-[Continuation of the main program block]
 
 		-2,0
 		SPLAT
@@ -2465,7 +2448,6 @@ H10&rarr;	SMASBL,4,MM2-NLIST
 
 <hr>
 [Page header: "IES OPLW 023"]
-[Continuation of the main program block]
 
 		0
 		**PICTURE MASTER
@@ -2517,7 +2499,6 @@ Q3&rarr;		DISPLAYK
 
 <hr>
 [Page header: "IES OPLW 024"]
-[Continuation of the main program block]
 
 		0	**TUPLE
 		0	**VARLOC
@@ -2567,7 +2548,6 @@ V3&rarr;		MASTER&equiv;VARIABLES&rarr;(41,45,,37,43)
 
 <hr>
 [Page header: "IES OPLW 025"]
-[Continuation of the main program block]
 
 		hJMP TRANSFORM 	**MOVIT
 		16,14,,0	**SIZE
@@ -2619,7 +2599,6 @@ V6&rarr;		MASBL,4,,VARIABLES-LIST
 
 <hr>
 [Page header: "IES OPLW 026"]
-[End of the main program block]
 
 		hJMP MAGNUM	**DISPLAY
 		hJMP CPINUM	**HOWBIG
@@ -2636,43 +2615,33 @@ Q6&rarr;		DISPLAYK
 [Page header: "LMH GX7A 001"]
 [Handwritten: "FULL TEXT", some other random scribbles]
 [Stamped: "SEP 21 1962"]
-[Page contains no code, beginning of the symex table]
 
 <hr>
 [Page header: "LMH GX7A 002"]
-[Page contains no code, continuation of the symex table]
 
 <hr>
 [Page header: "LMH GX7A 004"]
-[Page contains no code, end of the symex table]
 
 <hr>
 [Page header: "LMH GX7A 005"]
-[Page contains no code, beginning of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 006"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 007"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 010"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 012"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 013"]
-[Page contains no code, end of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 014"]
-[Beginning of the macro definition block]
 
 &#9755;&#9755;DEF LDAE&equiv;A,B,C,D
 LDA A
@@ -2727,7 +2696,6 @@ STA A
 
 <hr>
 [Page header: "LMH GX7A 015"]
-[Beginning of the macro definition block]
 
 STB A+1
 &#9755;&#9755;EMD
@@ -2783,7 +2751,6 @@ STB A+1
 
 <hr>
 [Page header: "LMH GX7A 016"]
-[Continuation of the macro definition block]
 
 	<sup>1</sup>EXX <sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
 	<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
@@ -2838,7 +2805,6 @@ STB A+1
 
 <hr>
 [Page header: "LMH GX7A 017"]
-[Continuation of the macro definition block]
 
 	<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1      **TAKE
 	<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
@@ -2892,7 +2858,6 @@ LGORR1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 
 <hr>
 [Page header: "LMH GX7A 020"]
-[Continuation of the macro definition block]
 
 LGORR2&rarr;     SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
 LGORREND&rarr;   JPQ LGORR0
@@ -2946,7 +2911,6 @@ LGORLI1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 
 <hr>
 [Page header: "LMH GX7A 021"]
-[Continuation of the macro definition block]
 
 	hJPQ GORLIEXIT+(GORLIEXIT/GORLIEXIT&#9419;1&times;(LGORLIEND+1))
 	<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORLI2
@@ -2996,7 +2960,6 @@ NEWH2&rarr;	<sup>1</sup><sup>1</sup>AUX<sub>X</sub><sub>R</sub>{(N)+1,,-((N)+1)}
 
 <hr>
 [Page header: "LMH GX7A 022"]
-[Continuation of the macro definition block]
 
 &#9755;&#9755;DEF TYPEN&sup;SC,NUM&times;WD
 	LDC WD
@@ -3052,7 +3015,6 @@ TYPEEXIT&beta;&rarr;	JPQ XXX&beta;
 
 <hr>
 [Page header: "LMH GX7A 023"]
-[Continuation of the macro definition block]
 
 &#9755;&#9755;EMD
 
@@ -3109,7 +3071,6 @@ FIOAMSG&beta;&rarr;	0,744,,343042	**MIS 2.4
 
 <hr>
 [Page header: "LMH GX7A 024"]
-[Continuation of the macro definition block]
 
 LIOAMSG&beta;&rarr;	0,745,,243020	**EIA 2.5
 		,,753374	**? [actual question mark in the listing]
@@ -3165,7 +3126,6 @@ XSET&beta;&rarr;	9.,-1
 
 <hr>
 [Page header: "LMH GX7A 025"]
-[Continuation of the macro definition block]
 
 		-1
 		-3
@@ -3219,7 +3179,6 @@ TAFSCHK&rarr;	h<sup>1</sup>STE TAFST
 
 <hr>
 [Page header: "LMH GX7A 026"]
-[Continuation of the macro definition block]
 
 		h<sup>2</sup>LDE E
 		<sup>1</sup>STE TAFIOS
@@ -3273,7 +3232,6 @@ TAF4F&rarr;	<sup>3</sup>DPX {TPK&beta;}	**CLR FINE MK
 
 <hr>
 [Page header: "LMH GX7A 027"]
-[Continuation of the macro definition block]
 
 		<sup>1</sup>STE#+1
 		h<sup>1</sup>IOS<sub>4</sub><sub>6</sub>XXX	**RD MKS
@@ -3326,7 +3284,6 @@ XCHKSW&rarr;	<sup>1</sup>SXD<sub>3</sub><sub>4</sub>0	**MOD TO <sup>1</sup>SXD<s
 
 <hr>
 [Page header: "LMH GX7A 030"]
-[Continuation of the macro definition block]
 
 		JPQ XCHK
 		JPQ TAFIOSRET	**IGNORE WHAT WAS READ
@@ -3381,7 +3338,6 @@ TAFSTK&rarr;	TAFST<sub>3</sub><sub>4</sub>
 
 <hr>
 [Page header: "LMH GX7A 031"]
-[Continuation of the macro definition block]
 
 TAFDKF&rarr;	TAPEK1+10,,10
 TAFDKR&rarr;	TAPEK1-10,,-10
@@ -3435,7 +3391,6 @@ ERR=ERROR
 
 <hr>
 [Page header: "LMH GX7A 032"]
-[Continuation of the macro definition block]
 
 ERR=ERROR
 		<sup>1</sup>IOS<sub>4</sub><sub>6</sub>60000+SELECT	**SELECT TAPE
@@ -3490,7 +3445,6 @@ SCADD&rarr;	h<sup>4</sup>TSD B	**DUMMY
 
 <hr>
 [Page header: "LMH GX7A 033"]
-[Continuation of the macro definition block]
 
 		h<sup>1</sup>JPA {TURNOFF&Delta;}	**SUMCHK ERR
 		h<sup>1</sup>JPA {ERRLOOP&beta;}*	**SUMCHK ERR
@@ -3545,7 +3499,6 @@ WRELOOP&rarr;	<sup>2</sup><sup>1</sup>STA {TPK&beta;}	**PREDICTED BM
 
 <hr>
 [Page header: "LMH GX7A 034"]
-[Continuation of the macro definition block]
 
 		h<sup>3</sup>TSD {TPK&beta;} **FINE MK
 		<sup>2</sup>SED A	**COMP WITH EXPECTED
@@ -3600,6 +3553,7 @@ WRCONT&rarr;	h<sup>1</sup>JNX<sub>3</sub><sub>5</sub>WRLD	**ANY DATA LEFT?
 
 <hr>
 [Page header: "LMH GX7A 035"]
+
 		<sup>1</sup><sup>2</sup>LDB {0,,-0}	**0
 		JPQ WRLD+1
 &#9755;&#9755;EMD
@@ -4070,7 +4024,7 @@ MACAPTX&rarr;
 		<sup>-</sup><sup>1</sup>JPX <sub>&gamma;</sub> MACAPA
 
 <hr>
-[Page header: "IES 2XMX 010" (previous page had "007", out of sequence?)]
+[Page header: "IES 2XMX 010" (octal numbering, previous page had 007)]
 
 		JPQ MACAPX
 MACAP1&rarr;	RSX <sub>&alpha;</sub> ATBITS+1
@@ -5617,39 +5571,30 @@ LAST&rarr;	ZZLAST
 
 <hr>
 [Page header: "IES OPLW 001"]
-[Page contains no code, beginning of the symex table.]
 
 <hr>
 [Page header: "IES OPLW 002"]
-[Page contains no code, continuation of the symex table.]
 
 <hr>
 [Page header: "IES OPLW 003"]
-[Page contains no code, last part of the symex table.]
 
 <hr>
 [Page header: "IES OPLW 004"]
-[Page contains no code, beginning of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 005"]
-[Page contains no code, continuation of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 006"]
-[Page contains no code, continuation of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 007"]
-[Page contains no code, continuation of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 010"]
-[Page contains no code, end of the equalities table.]
 
 <hr>
 [Page header: "IES OPLW 012"]
-[Beginning of the macro definition block]
 
 &#9755;&#9755; MOVE|A&rarr;B
 hLDE A
@@ -5704,7 +5649,6 @@ SUB Q
 
 <hr>
 [Page header: "IES OPLW 013"]
-[Continuation of the macro definition block]
 
 hJOV U+(Q)-(Q)
 hJPQ CACT
@@ -5759,7 +5703,6 @@ STC A+C
 
 <hr>
 [Page header: "IES OPLW 014"]
-[Continuation of the macro definition block]
 
 STA A+D
 &#9755;&#9755;EMD
@@ -5814,7 +5757,6 @@ SKZ ERRORSTOP
 
 <hr>
 [Page header: "IES OPLW 015"]
-[Continuation of the macro definition block]
 
 <sup>1</sup>#<sub>&alpha;</sub> [another interesting case]
 JPQ P
@@ -5869,7 +5811,6 @@ hJPQ SUBR
 
 <hr>
 [Page header: "IES OPLW 016"]
-[Continuation of the macro definition block]
 
 LGORR2&rarr;	SKX<sub>X</sub><sub>R</sub><sub>2</sub>#	**MODIFIED
 LGORREND&rarr;	JPQ LGORR0
@@ -5923,7 +5864,6 @@ SUBR1&rarr;	JPQ #
 
 <hr>
 [Page header: "IES OPLW 017"]
-[End of the macro definition block]
 
 &#9755;&#9755;DEF HEADER&equiv;T&rarr;N&rarr;P
 		T1=P
@@ -5970,7 +5910,6 @@ SUBR1&rarr;	JPQ #
 
 <hr>
 [Page header: "IES OPLW 020"]
-[Beginning of main program block]
 
  200067|
 		JPQ STARTS
@@ -6023,7 +5962,6 @@ MM4&rarr;	UNIVBH	**CONSTRAINTS
 
 <hr>
 [Page header: "IES OPLW 021"]
-[Continuation of the main program block]
 
 H1&rarr;		SMASBL,4,,MM2-NLIST	**FREES
 		MM2+SPECB+1-NLIST,,SPLATT
@@ -6072,7 +6010,6 @@ H7&rarr;		HEADER&equiv;HOLDERS&rarr;(42,26,,24,23)
 
 <hr>
 [Page header: "IES OPLW 022"]
-[Continuation of the main program block]
 
 		-2,0
 		SPLAT
@@ -6120,7 +6057,6 @@ H10&rarr;	SMASBL,4,MM2-NLIST
 
 <hr>
 [Page header: "IES OPLW 023"]
-[Continuation of the main program block]
 
 		0
 		**PICTURE MASTER
@@ -6172,7 +6108,6 @@ Q3&rarr;		DISPLAYK
 
 <hr>
 [Page header: "IES OPLW 024"]
-[Continuation of the main program block]
 
 		0	**TUPLE
 		0	**VARLOC
@@ -6222,7 +6157,6 @@ V3&rarr;		MASTER&equiv;VARIABLES&rarr;(41,45,,37,43)
 
 <hr>
 [Page header: "IES OPLW 025"]
-[Continuation of the main program block]
 
 		hJMP TRANSFORM 	**MOVIT
 		16,14,,0	**SIZE
@@ -6274,7 +6208,6 @@ V6&rarr;		MASBL,4,,VARIABLES-LIST
 
 <hr>
 [Page header: "IES OPLW 026"]
-[End of the main program block]
 
 		hJMP MAGNUM	**DISPLAY
 		hJMP CPINUM	**HOWBIG
@@ -6291,43 +6224,33 @@ Q6&rarr;		DISPLAYK
 [Page header: "LMH GX7A 001"]
 [Handwritten: "FULL TEXT", some other random scribbles]
 [Stamped: "SEP 21 1962"]
-[Page contains no code, beginning of the symex table]
 
 <hr>
 [Page header: "LMH GX7A 002"]
-[Page contains no code, continuation of the symex table]
 
 <hr>
 [Page header: "LMH GX7A 004"]
-[Page contains no code, end of the symex table]
 
 <hr>
 [Page header: "LMH GX7A 005"]
-[Page contains no code, beginning of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 006"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 007"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 010"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 012"]
-[Page contains no code, continuation of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 013"]
-[Page contains no code, end of the equalities table]
 
 <hr>
 [Page header: "LMH GX7A 014"]
-[Beginning of the macro definition block]
 
 &#9755;&#9755;DEF LDAE&equiv;A,B,C,D
 LDA A
@@ -6382,7 +6305,6 @@ STA A
 
 <hr>
 [Page header: "LMH GX7A 015"]
-[Beginning of the macro definition block]
 
 STB A+1
 &#9755;&#9755;EMD
@@ -6438,7 +6360,6 @@ STB A+1
 
 <hr>
 [Page header: "LMH GX7A 016"]
-[Continuation of the macro definition block]
 
 	<sup>1</sup>EXX <sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
 	<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
@@ -6493,7 +6414,6 @@ STB A+1
 
 <hr>
 [Page header: "LMH GX7A 017"]
-[Continuation of the macro definition block]
 
 	<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1      **TAKE
 	<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
@@ -6547,7 +6467,6 @@ LGORR1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 
 <hr>
 [Page header: "LMH GX7A 020"]
-[Continuation of the macro definition block]
 
 LGORR2&rarr;     SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
 LGORREND&rarr;   JPQ LGORR0
@@ -6601,7 +6520,6 @@ LGORLI1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 
 <hr>
 [Page header: "LMH GX7A 021"]
-[Continuation of the macro definition block]
 
 	hJPQ GORLIEXIT+(GORLIEXIT/GORLIEXIT&#9419;1&times;(LGORLIEND+1))
 	<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORLI2
@@ -6651,7 +6569,6 @@ NEWH2&rarr;	<sup>1</sup><sup>1</sup>AUX<sub>X</sub><sub>R</sub>{(N)+1,,-((N)+1)}
 
 <hr>
 [Page header: "LMH GX7A 022"]
-[Continuation of the macro definition block]
 
 &#9755;&#9755;DEF TYPEN&sup;SC,NUM&times;WD
 	LDC WD
@@ -6707,7 +6624,6 @@ TYPEEXIT&beta;&rarr;	JPQ XXX&beta;
 
 <hr>
 [Page header: "LMH GX7A 023"]
-[Continuation of the macro definition block]
 
 &#9755;&#9755;EMD
 
@@ -6764,7 +6680,6 @@ FIOAMSG&beta;&rarr;	0,744,,343042	**MIS 2.4
 
 <hr>
 [Page header: "LMH GX7A 024"]
-[Continuation of the macro definition block]
 
 LIOAMSG&beta;&rarr;	0,745,,243020	**EIA 2.5
 		,,753374	**? [actual question mark in the listing]
@@ -6820,7 +6735,6 @@ XSET&beta;&rarr;	9.,-1
 
 <hr>
 [Page header: "LMH GX7A 025"]
-[Continuation of the macro definition block]
 
 		-1
 		-3
@@ -6874,7 +6788,6 @@ TAFSCHK&rarr;	h<sup>1</sup>STE TAFST
 
 <hr>
 [Page header: "LMH GX7A 026"]
-[Continuation of the macro definition block]
 
 		h<sup>2</sup>LDE E
 		<sup>1</sup>STE TAFIOS
@@ -6928,7 +6841,6 @@ TAF4F&rarr;	<sup>3</sup>DPX {TPK&beta;}	**CLR FINE MK
 
 <hr>
 [Page header: "LMH GX7A 027"]
-[Continuation of the macro definition block]
 
 		<sup>1</sup>STE#+1
 		h<sup>1</sup>IOS<sub>4</sub><sub>6</sub>XXX	**RD MKS
@@ -6981,7 +6893,6 @@ XCHKSW&rarr;	<sup>1</sup>SXD<sub>3</sub><sub>4</sub>0	**MOD TO <sup>1</sup>SXD<s
 
 <hr>
 [Page header: "LMH GX7A 030"]
-[Continuation of the macro definition block]
 
 		JPQ XCHK
 		JPQ TAFIOSRET	**IGNORE WHAT WAS READ
@@ -7036,7 +6947,6 @@ TAFSTK&rarr;	TAFST<sub>3</sub><sub>4</sub>
 
 <hr>
 [Page header: "LMH GX7A 031"]
-[Continuation of the macro definition block]
 
 TAFDKF&rarr;	TAPEK1+10,,10
 TAFDKR&rarr;	TAPEK1-10,,-10
@@ -7090,7 +7000,6 @@ ERR=ERROR
 
 <hr>
 [Page header: "LMH GX7A 032"]
-[Continuation of the macro definition block]
 
 ERR=ERROR
 		<sup>1</sup>IOS<sub>4</sub><sub>6</sub>60000+SELECT	**SELECT TAPE
@@ -7145,7 +7054,6 @@ SCADD&rarr;	h<sup>4</sup>TSD B	**DUMMY
 
 <hr>
 [Page header: "LMH GX7A 033"]
-[Continuation of the macro definition block]
 
 		h<sup>1</sup>JPA {TURNOFF&Delta;}	**SUMCHK ERR
 		h<sup>1</sup>JPA {ERRLOOP&beta;}*	**SUMCHK ERR
@@ -7200,7 +7108,6 @@ WRELOOP&rarr;	<sup>2</sup><sup>1</sup>STA {TPK&beta;}	**PREDICTED BM
 
 <hr>
 [Page header: "LMH GX7A 034"]
-[Continuation of the macro definition block]
 
 		h<sup>3</sup>TSD {TPK&beta;} **FINE MK
 		<sup>2</sup>SED A	**COMP WITH EXPECTED
@@ -7255,6 +7162,7 @@ WRCONT&rarr;	h<sup>1</sup>JNX<sub>3</sub><sub>5</sub>WRLD	**ANY DATA LEFT?
 
 <hr>
 [Page header: "LMH GX7A 035"]
+
 		<sup>1</sup><sup>2</sup>LDB {0,,-0}	**0
 		JPQ WRLD+1
 &#9755;&#9755;EMD
