--- a/sk.html
+++ b/sk.html
@@ -4040,10 +4040,277 @@ ZERO&rarr;		4,1,,-200,-0
 <hr>
 [Page header: "LMH GX7A 011"]
 
+		SIZE/2,,-SIZE/2
+		1,,-200000
+		SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		-SIZE/2,,-SIZE/2
+		-SIZE/2,,SIZE/2
+AA&rarr;		3,
+		BL
+		SIZE
+		0
+		SIZE
+		BR
+		0
+		-SIZE/4,,0
+		SIZE/4,,0
+BB&rarr;		6,
+		TL
+		BL
+		0
+		BL
+		0,,-SIZE
+		1,,200000
+		0,,-SIZE
+		0,,-2&times;SIZE/5
+		1,,200000
+		SIZE/5
+		3&times;SIZE/5
+		0
+		SIZE
+		TL
+		0
+		-SIZE/2,,SIZE/5
+		SIZE/5
+CC&rarr;		3,1,,140,0
+		(1574.)&times;SIZE/(4000.),,(3414.)&times;SIZE/(4000.)
+		SIZE/2
+		0
+		-SIZE/2,,SIZE/2
+		-SIZE/2,,-SIZE/2
+		1,,140000
+		-SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+DD&rarr;		2,1,,-200,-0
+		TL
+		-SIZE/2,,0
+		0
+		BL
+		TL
+EE&rarr;		4,
 
+<hr>
+[Page header: "LMH GX7A 012"]
+		TR
+		TL
+		0
+		TL
+		BL
+		0
+		BL
+		BR
+		0
+		-SIZE/2,,0
+		SIZE/3,,0
+FF&rarr;		3,,
+		TR
+		TL
+		0
+		TL
+		BL
+		0
+		-SIZE/2,,0
+		SIZE/3,,0
+GG&rarr;		5,1,,140,0
+		(1574.)&times;SIZE/(4000.),,(3414.)&times;SIZE/(4000.)
+		SIZE/2
+		0
+		-SIZE/2,,SIZE/2
+		-SIZE/2,,-SIZE/2
+		1,,200000
+		-SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		SIZE/2,,-SIZE/2
+		SIZE/2,,0
+		0
+		SIZE/2,,0
+		0
+HH&rarr;		3,
+		TL
+		BL
+		0
+		-SIZE/2,,0
+		SIZE/2,,0
+		0
+		TR
+		BR
+II&rarr;		3,
+		TL
+		TR
+		0
+		SIZE
+		-SIZE
 
+<hr>
+[Page header: "LMH GX7A 013"]
 
+		0
+		BL
+		BR
+JJ&rarr;		3,
+		TL
+		TR
+		0
+		SIZE
+		0,,-3&times;SIZE/4
+		1,,-200000
+		0,,-3&times;SIZE/4
+		-SIZE/4,,-3&times;SIZE/4
+KK&rarr;		3,
+		TL
+		BL
+		0
+		-SIZE/2,,-SIZE/3
+		TR
+		0
+		-SIZE/4,,0
+		BR
+LL&rarr;		2,
+		TL
+		BL
+		0
+		BL
+		BR
+		[Trying to decipher this]
+MM&rarr;		4,	[4 lines]
+		BL	[Line start: Bottom-Left]
+		TL	[Line end: Top-Left]
+		0	[terminating zero?]
+		TL	[Line start: Top-Left]
+		0	[Line end: zero likely represent the center of the drawing area]
+		0	[terminator?]
+		0	[Line start: center]
+		TR	[Line end: top-right]
+		0	[terminator?]
+		TR	[Line start: Top-Right]
+		BR	[Line end: Bottom-Right, no terminator needed for the last entry?]
+NN&rarr;		3,
+		BL
+		TL
+		0
+		TL
+		BR
+		0
+		BR
+		TR
+		[More complicated, involves circles/arcs]
+OO&rarr;		4,1,,-200,-0
+		-SIZE/2,,SIZE/2
 
+<hr>
+[Page header: "LMH GX7A 014"]
+
+		SIZE/2
+		0
+		SIZE/2..SIZE/2
+		SIZE/2,,-SIZE/2
+		1..-200000
+		SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		-SIZE/2,,-SIZE/2
+PP&rarr;		4,
+		BL
+		TL
+		0
+		TL
+		SIZE
+		1,,-200000
+		SIZE
+		SIZE/2
+		0
+		0
+		-SIZE/2,,
+QQ&rarr;		5,1,,-200,-0
+		-SIZE/2,,SIZE/2
+		SIZE/2
+		0
+		SIZE/2,,SIZE/2
+		SIZE/2,,-SIZE/2
+		1,,-200000
+		SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		-SIZE/2,,-SIZE/2
+		-SIZE/2,,SIZE/2
+		0
+		0,,-SIZE/2
+		BR
+RR&rarr;		5,
+		BL
+		TL
+		0
+		TL
+		SIZE
+		1,,-200000
+		SIZE
+		SIZE/2
+		0
+		0
+		-SIZE/2,,0
+		0
+
+<hr>
+[Page header: "LMH GX7A 0??" (partially cut by margin)]
+
+		0
+		BR
+SS&rarr;		2,1,,240,0
+		(1574.)&times;SIZE/(5000.),,(4414.)&times;SIZE/(5000.)
+		3*SIZE/5
+		1,,-240000
+		SIZE/5
+		0,,-2&times;SIZE/5
+TT&rarr;		2,
+		TL
+		TR
+		0
+		SIZE
+		0,,-SIZE
+UU&rarr;		3,
+		TL
+		-SIZE/2,,-SIZE/2
+		0,1,,200,0
+		-SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		SIZE/2,,-SIZE/2
+		TR
+VV&rarr;		2,
+		TL
+		0,,-SIZE
+		0
+		0,,-SIZE
+		TR
+		[WW entry looks strange, 4 lines declared, more specified?]
+		[Some additional structure?]
+WW&rarr;		4,
+		TL
+		-SIZE/4,,-SIZE
+		0
+		-SIZE/4,,-SIZE
+		0
+		0
+		0
+		SIZE/4,,-SIZE
+		0
+		SIZE/4,,-SIZE
+		TR
+XX&rarr;		2,
+		TL
+		BR
+		0
+		BL
+		TR
+YY&rarr;		3,
+		TL
+		0
+
+<hr>
+[Page header: "LMH GX7A 016"]
 
 
 </code></pre></body></html>
@@ -8089,10 +8356,277 @@ ZERO&rarr;		4,1,,-200,-0
 <hr>
 [Page header: "LMH GX7A 011"]
 
+		SIZE/2,,-SIZE/2
+		1,,-200000
+		SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		-SIZE/2,,-SIZE/2
+		-SIZE/2,,SIZE/2
+AA&rarr;		3,
+		BL
+		SIZE
+		0
+		SIZE
+		BR
+		0
+		-SIZE/4,,0
+		SIZE/4,,0
+BB&rarr;		6,
+		TL
+		BL
+		0
+		BL
+		0,,-SIZE
+		1,,200000
+		0,,-SIZE
+		0,,-2&times;SIZE/5
+		1,,200000
+		SIZE/5
+		3&times;SIZE/5
+		0
+		SIZE
+		TL
+		0
+		-SIZE/2,,SIZE/5
+		SIZE/5
+CC&rarr;		3,1,,140,0
+		(1574.)&times;SIZE/(4000.),,(3414.)&times;SIZE/(4000.)
+		SIZE/2
+		0
+		-SIZE/2,,SIZE/2
+		-SIZE/2,,-SIZE/2
+		1,,140000
+		-SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+DD&rarr;		2,1,,-200,-0
+		TL
+		-SIZE/2,,0
+		0
+		BL
+		TL
+EE&rarr;		4,
 
+<hr>
+[Page header: "LMH GX7A 012"]
+		TR
+		TL
+		0
+		TL
+		BL
+		0
+		BL
+		BR
+		0
+		-SIZE/2,,0
+		SIZE/3,,0
+FF&rarr;		3,,
+		TR
+		TL
+		0
+		TL
+		BL
+		0
+		-SIZE/2,,0
+		SIZE/3,,0
+GG&rarr;		5,1,,140,0
+		(1574.)&times;SIZE/(4000.),,(3414.)&times;SIZE/(4000.)
+		SIZE/2
+		0
+		-SIZE/2,,SIZE/2
+		-SIZE/2,,-SIZE/2
+		1,,200000
+		-SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		SIZE/2,,-SIZE/2
+		SIZE/2,,0
+		0
+		SIZE/2,,0
+		0
+HH&rarr;		3,
+		TL
+		BL
+		0
+		-SIZE/2,,0
+		SIZE/2,,0
+		0
+		TR
+		BR
+II&rarr;		3,
+		TL
+		TR
+		0
+		SIZE
+		-SIZE
 
+<hr>
+[Page header: "LMH GX7A 013"]
 
+		0
+		BL
+		BR
+JJ&rarr;		3,
+		TL
+		TR
+		0
+		SIZE
+		0,,-3&times;SIZE/4
+		1,,-200000
+		0,,-3&times;SIZE/4
+		-SIZE/4,,-3&times;SIZE/4
+KK&rarr;		3,
+		TL
+		BL
+		0
+		-SIZE/2,,-SIZE/3
+		TR
+		0
+		-SIZE/4,,0
+		BR
+LL&rarr;		2,
+		TL
+		BL
+		0
+		BL
+		BR
+		[Trying to decipher this]
+MM&rarr;		4,	[4 lines]
+		BL	[Line start: Bottom-Left]
+		TL	[Line end: Top-Left]
+		0	[terminating zero?]
+		TL	[Line start: Top-Left]
+		0	[Line end: zero likely represent the center of the drawing area]
+		0	[terminator?]
+		0	[Line start: center]
+		TR	[Line end: top-right]
+		0	[terminator?]
+		TR	[Line start: Top-Right]
+		BR	[Line end: Bottom-Right, no terminator needed for the last entry?]
+NN&rarr;		3,
+		BL
+		TL
+		0
+		TL
+		BR
+		0
+		BR
+		TR
+		[More complicated, involves circles/arcs]
+OO&rarr;		4,1,,-200,-0
+		-SIZE/2,,SIZE/2
 
+<hr>
+[Page header: "LMH GX7A 014"]
+
+		SIZE/2
+		0
+		SIZE/2..SIZE/2
+		SIZE/2,,-SIZE/2
+		1..-200000
+		SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		-SIZE/2,,-SIZE/2
+PP&rarr;		4,
+		BL
+		TL
+		0
+		TL
+		SIZE
+		1,,-200000
+		SIZE
+		SIZE/2
+		0
+		0
+		-SIZE/2,,
+QQ&rarr;		5,1,,-200,-0
+		-SIZE/2,,SIZE/2
+		SIZE/2
+		0
+		SIZE/2,,SIZE/2
+		SIZE/2,,-SIZE/2
+		1,,-200000
+		SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		-SIZE/2,,-SIZE/2
+		-SIZE/2,,SIZE/2
+		0
+		0,,-SIZE/2
+		BR
+RR&rarr;		5,
+		BL
+		TL
+		0
+		TL
+		SIZE
+		1,,-200000
+		SIZE
+		SIZE/2
+		0
+		0
+		-SIZE/2,,0
+		0
+
+<hr>
+[Page header: "LMH GX7A 0??" (partially cut by margin)]
+
+		0
+		BR
+SS&rarr;		2,1,,240,0
+		(1574.)&times;SIZE/(5000.),,(4414.)&times;SIZE/(5000.)
+		3*SIZE/5
+		1,,-240000
+		SIZE/5
+		0,,-2&times;SIZE/5
+TT&rarr;		2,
+		TL
+		TR
+		0
+		SIZE
+		0,,-SIZE
+UU&rarr;		3,
+		TL
+		-SIZE/2,,-SIZE/2
+		0,1,,200,0
+		-SIZE/2,,-SIZE/2
+		0,,-SIZE/2
+		0
+		SIZE/2,,-SIZE/2
+		TR
+VV&rarr;		2,
+		TL
+		0,,-SIZE
+		0
+		0,,-SIZE
+		TR
+		[WW entry looks strange, 4 lines declared, more specified?]
+		[Some additional structure?]
+WW&rarr;		4,
+		TL
+		-SIZE/4,,-SIZE
+		0
+		-SIZE/4,,-SIZE
+		0
+		0
+		0
+		SIZE/4,,-SIZE
+		0
+		SIZE/4,,-SIZE
+		TR
+XX&rarr;		2,
+		TL
+		BR
+		0
+		BL
+		TR
+YY&rarr;		3,
+		TL
+		0
+
+<hr>
+[Page header: "LMH GX7A 016"]
 
 
 </code></pre></body></html>
